--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#79a0bf"
+primaryColor="#000000"
+backgroundColor="#eae7d6"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#000000"
 font="sans serif"
